Update Back Button
Update Back Button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="text" placeholder="0" id="display" readonly><br><br>
     <div class="d-flex justify-content-between divBtn">
         <button onclick="btnAC()">AC</button>
-        <button onclick="btnPM()">←</button>
+        <button onclick="btnBack()">←</button>
         <button onclick="btnMod()">%</button>
         <button onclick="btndiv()">/</button>
     </div>
